<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <EditText
        android:id="@+id/enterTimeText5"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_weight="0.20"
        android:hint="@string/enter_a_time_in_seconds"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="36sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/startBtn5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/start5"
            android:layout_weight="1.00"
            tools:ignore="ButtonStyle" />

        <ToggleButton
            android:id="@+id/pauseBtn5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.00"
            android:checked="false"
            android:text="@string/pause5"
            android:textOff="Pause"
            android:textOn="Resume"
            tools:ignore="ButtonStyle,HardcodedText" />

        <Button
            android:id="@+id/cancelBtn5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.00"
            android:text="@string/reset"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <EditText
        android:id="@+id/enterTimeText6"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_weight="0.16"
        android:hint="@string/enter_a_time_in_seconds"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="36sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/startBtn6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/start5"
            android:layout_weight="1.00"
            tools:ignore="ButtonStyle" />

        <ToggleButton
            android:id="@+id/pauseBtn6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.00"
            android:checked="false"
            android:text="@string/pause5"
            android:textOff="Pause"
            android:textOn="Resume"
            tools:ignore="ButtonStyle,HardcodedText" />

        <Button
            android:id="@+id/cancelBtn6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.00"
            android:text="@string/reset"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <EditText
        android:id="@+id/enterTimeText7"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_weight="0.16"
        android:hint="@string/enter_a_time_in_seconds"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="36sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/startBtn7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/start5"
            android:layout_weight="1.00"
            tools:ignore="ButtonStyle" />

        <ToggleButton
            android:id="@+id/pauseBtn7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.00"
            android:checked="false"
            android:text="@string/pause5"
            android:textOff="Pause"
            android:textOn="Resume"
            tools:ignore="ButtonStyle,HardcodedText" />

        <Button
            android:id="@+id/cancelBtn7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.00"
            android:text="@string/reset"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <EditText
        android:id="@+id/enterTimeText8"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_weight="0.16"
        android:hint="@string/enter_a_time_in_seconds"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="36sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/startBtn8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/start5"
            android:layout_weight="1.00"
            tools:ignore="ButtonStyle" />

        <ToggleButton
            android:id="@+id/pauseBtn8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.00"
            android:checked="false"
            android:text="@string/pause5"
            android:textOff="Pause"
            android:textOn="Resume"
            tools:ignore="ButtonStyle,HardcodedText" />

        <Button
            android:id="@+id/cancelBtn8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.00"
            android:text="@string/reset"
            tools:ignore="ButtonStyle" />

    </LinearLayout>
</LinearLayout>
